--- a/.env
+++ b/.env
@@ -43,3 +43,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
+
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=cb84c21a3809edbb805f6d66298c4e87
