--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
         "jms/serializer-bundle": "^5.4",
         "lcobucci/jwt": "^5.4",
         "lexik/jwt-authentication-bundle": "^3.1",
-        "nelmio/cors-bundle": "^2.5",
+        "nelmio/cors-bundle": "*",
         "phpdocumentor/reflection-docblock": "^5.4",
         "phpstan/phpdoc-parser": "^1.29",
         "symfony/asset": "7.1.*",
