--- a/config/packages/nelmio_cors.yaml
+++ b/config/packages/nelmio_cors.yaml
@@ -12,7 +12,7 @@ nelmio_cors:
  paths:
   '^/api/':
    allow_origin: ['*']
-   allow_headers: ['X-Custom-Auth', 'Content-type']
+   allow_headers: ['*']
    allow_methods: ['POST', 'PUT', 'GET', 'DELETE']
    max_age: 3600
   '^/':
