--- a/config/packages/jms_serializer.yaml
+++ b/config/packages/jms_serializer.yaml
@@ -1,7 +1,6 @@
 jms_serializer:
     visitors:
-        xml_serialization:
-            format_output: '%kernel.debug%'
+        json_serialization:
 #    metadata:
 #        auto_detection: false
 #        directories:
